--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -88,7 +88,6 @@
                 </li>
               </ul>
             </div>
-           
           </li>
 
           <li>
@@ -99,7 +98,6 @@
               <span>Manage Ads</span>
               <span class="right-icon ms-auto"><i class="ri-arrow-drop-down-line"></i></span>
             </a>
-           
             <div class="collapse" id="collapseManageAds">
               <ul class="navbar-nav ps-3">
                 <li>
@@ -116,6 +114,61 @@
                       <i class="ri-layout-column-line"></i>
                     </span>
                     <span>View Ads</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <!-- New section for Manage Orders -->
+          <li>
+            <a class="nav-link px-3 sidebar-link" data-bs-toggle="collapse" href="#collapseManageOrders" role="button" aria-expanded="false" aria-controls="collapseManageOrders">
+              <span class="me-2">
+                <i class="ri-layout-column-line"></i>
+              </span>
+              <span>Manage Orders</span>
+              <span class="right-icon ms-auto"><i class="ri-arrow-drop-down-line"></i></span>
+            </a>
+            <div class="collapse" id="collapseManageOrders">
+              <ul class="navbar-nav ps-3">
+                <li>
+                  <a href="/admin/pending-orders" class="nav-link px-3">
+                    <span class="me-2">
+                      <i class="ri-layout-column-line"></i>
+                    </span>
+                    <span>Pending Orders</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="/admin/placed-orders" class="nav-link px-3">
+                    <span class="me-2">
+                      <i class="ri-layout-column-line"></i>
+                    </span>
+                    <span>Placed Orders</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="/admin/in-progress-orders" class="nav-link px-3">
+                    <span class="me-2">
+                      <i class="ri-layout-column-line"></i>
+                    </span>
+                    <span>In-Progress Orders</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="/admin/delivered-orders" class="nav-link px-3">
+                    <span class="me-2">
+                      <i class="ri-layout-column-line"></i>
+                    </span>
+                    <span>Delivered Orders</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="/admin/cancelled-orders" class="nav-link px-3">
+                    <span class="me-2">
+                      <i class="ri-layout-column-line"></i>
+                    </span>
+                    <span>Cancelled Orders</span>
                   </a>
                 </li>
               </ul>
