updation in admin page

--- a/views/admin/view-products.hbs
+++ b/views/admin/view-products.hbs
@@ -9,37 +9,33 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
                             <div class="card text-white bg-primary h-100">
-                                <div class="card-header">Header</div>
+                                <div class="card-header"> Order details</div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Primary card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <h5 class="card-title">Total Orders: {{orderCount}}</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
                             <div class="card text-white bg-success h-100">
-                                <div class="card-header">Header</div>
+                                <div class="card-header">User details</div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Primary card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <h5 class="card-title">Total users: {{userCount}}</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
                             <div class="card text-white bg-warning h-100">
-                                <div class="card-header">Header</div>
+                                <div class="card-header">Product details</div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Primary card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <h5 class="card-title">Product count: {{productCount}}</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
                             <div class="card text-white bg-danger h-100">
-                                <div class="card-header">Header</div>
+                                <div class="card-header">Pending Orders details</div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Primary card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <h5 class="card-title">Total pending orders: {{pendingOrderCount}}</h5>
                                 </div>
                             </div>
                         </div>
