--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -136,7 +136,7 @@
 </head>
 <body>
   {{#if showHeader}}
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <a href="/" class="navbar-brand logo">Volt-Cart</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
